welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: identifier expected but 'new' found.
  def new Array[Int(num)];
      ^